--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+AttachTo v1.0.2 - 2017-08-02
+ - Added Visual Studio 2017 support
+
 AttachTo v1.0.1 - 2012-02-08
  - Fixed that show/hide menu commands where not applied immediately after Visual Studio restart
  - Added attaching also to nunit-console.exe process, and x86 counterparts of all NUnit processes
