Updated README file and added AttachTo-VS2017.vsix

--- a/README
+++ b/README
@@ -4,4 +4,12 @@ Now you can start debugging web site hosted in local IIS server or failing NUnit
 
 AttachTo extension provides options to hide commands not relevant to you. You can also assign shortcut using Tools -> Options -> Keyboard.
 
-Visual Studio Gallery homepage: http://visualstudiogallery.msdn.microsoft.com/d0265ab0-df51-4100-8e10-1f84403c4cd0
+## Important:
+This extension is NOT compatible with versions older than VS2017!!!
+
+## Download extension:
+The vsix files are located (creatively) in the folder named "VSIX Files". Just download it and install it.
+
+If you want support for older Visual Studio versions, use Whut's extension version.
+His source code is on https://github.com/whut/AttachTo
+His extension can be found on: http://visualstudiogallery.msdn.microsoft.com/d0265ab0-df51-4100-8e10-1f84403c4cd0
